...
    let totalPrice: Int32
    let discount: Int32
    let totalWithoutDiscount: Int32
    let currency: String?
    let tipTotal: Int32
    let tipCurrency: String?
    let rating: Int32
    #elseif DRIVER
    let riderName: String?
    #endif
    
    #if RIDER
    init(with ride: Ride) {
...
            let vc = OptionsViewController()
            vc.delegate = self
            vc.configureForDelegate(with: "Please select a reason to report the rider. You can add more info on the feedback field.", options: riderReportReasons)
            self.present(vc, animated: true)
        } else {
            reportReason = nil
            confirmationButtonTitle = "Submit Feedback"
            ratingView.configureReportReason(nil)
        }
        #endif
    }
    
    override func viewDidLoad() {
        leftNavigationStyle = .back
        leftNavigationAction = .pop(true)
        
        #if RIDER
        Notification.addObserver(self, name: .didUpdatePaymentMethod, selector: #selector(paymentMethodDidUpdate))
        title = "Thank you for Riding".localize()
        confirmationButtonTitle = "general_done".localize()
        #elseif DRIVER
        title = "Rate your Rider"
        confirmationButtonTitle = "Submit Feedback"
        if toReportOnly {
            ratingView.setRatingForReport()
            configureRatingView(1)
        }
        #endif
...
