...
"ride_ride_confirmation" = "Ride Confirmation";
"ride_rating_reason" = "We're sorry you were unhappy with your ride.\nCan you please let us know the reason?";
"ride_rating_submitted" = "Rating Submitted!";
"ride_your_driver" = "Your driver";
"ride_select_pickup_stop" = "Select your pick up spot";
"ride_select_dropoff_stop" = "Select your drop off spot";
"ride_select_this_stop" = "Ok";
"ride_go_to_stop_short" = "Your driver will pick you up at the spot you selected.";
"ride_go_to_stop" = "Your driver will pick you up at the spot you selected. Please make sure you are there when your driver arrives.";
"ride_select_another_stop" = "Select another spot";
"ride_pickup_at" = "Pick up at";
"ride_dropoff_at" = "Drop off at";
"ride_driver_pickup" = "Your driver will pick you up here. Need a different pick up spot? Search for another location above or tap Move pin.";
...
"rider_route_is_optimized" = "Driver routes are optimized to ensure efficiency for all rides in the queue - taking distance, number of stops, and wait time into account.";
"rider_keep_eye_on_app" = "As rides are added, completed, and cancelled, changes in the queue are reflected in your driver arrival time and the number of stops before your pickup.";


// REQUEST FLOW
"passengers" = "Passengers";
"pwyw_contribution" = "Contribution";
"accessibility" = "Accessibility";
"ride_request_ride_value" = "Ride Value";
"ride_request_where_to" = "Where to?";
"ride_request_confirm_route" = "Confirm Route";

// QUOTE
...
"Pincode Sent" = "Pincode Sent";
"Success!" = "Success!";
"Re-enter Password" = "Re-enter Password";
"Change Password" = "Change Password";
"Passwords Not Matching" = "Passwords Not Matching";
"Please make sure that you've entered the same password twice." = "Please make sure that you've entered the same password twice.";
"Welcome Back!" = "Welcome Back!";
"Sign in below with your account info" = "Sign in below with your account info";
"Welcome Aboard!" = "Welcome Aboard!";
"Start by filling out your basic account info\nMust be 16 or older to create an account" = "Start by filling out your basic account info\nMust be 16 or older to create an account";
"Tell us a little bit more about yourself" = "Tell us a little bit more about yourself";
"Change Phone" = "Change Phone";
"First we will send a PIN code to your new mobile phone" = "First we will send a PIN code to your new mobile phone";
...
"Price per additional passenger" = "Price per additional passenger";
"Max ride price" = "Max ride price";
"Pickup" = "Pickup";
"Dropoff" = "Dropoff";
"Ride Price" = "Contribution";
"Cancel Ride" = "Cancel Ride";
"Log In" = "Log In";
"Sign Up" = "Sign Up";
"and" = "and";
"You need to update Circuit app to the latest version in order to request rides" = "You need to update Circuit app to the latest version in order to request rides";
"Invalid Submission" = "Invalid Submission";
"Email address is not valid" = "Email address is not valid";
"Mobile phone number is not valid" = "Mobile phone number is not valid";
...
