...
}

class BottomView: UIView {
    
    @IBOutlet weak var stackView: UIStackView!
    @IBOutlet weak var alternateButton: Button!
    @IBOutlet weak var confirmationButton: Button!
    
    weak var delegate: BottomViewDelegate?

    var isAlternateButtonLast = false
    
    var alternateTitle: String? {
...
