...
    private func updateUI() {
        pageControl.alpha = 0 //default is hidden

        switch style {
        case .login:
            imageView.image = #imageLiteral(resourceName: "round_how_to_reg_black_48pt")
            titleLabel.text = "Welcome Back!".localize()
            subtitleLabel.text = "Sign in below with your account info".localize()
        case .registerOne:
            imageView.image = #imageLiteral(resourceName: "round_how_to_reg_black_48pt")
            titleLabel.text = "Welcome Aboard!".localize()
            subtitleLabel.text = "Start by filling out your basic account info\nMust be 16 or older to create an account".localize()
            pageControl.alpha = 1
...
        case .changePhoneVerify:
            imageView.image = #imageLiteral(resourceName: "baseline_call_black_48pt")
            titleLabel.text = "Change Phone".localize()
            subtitleLabel.text = "First we will send a PIN code to your new mobile phone".localize()
        case .phonePincode:
            imageView.image = #imageLiteral(resourceName: "baseline_call_black_48pt")
            titleLabel.text = "Confirm Phone".localize()
            subtitleLabel.text = "Please check your text messages for a pincode".localize()
        case .emailPincode:
            imageView.image = #imageLiteral(resourceName: "round_security_black_48pt")
            titleLabel.text = "Confirm Email".localize()
            subtitleLabel.text = "Please check your email inbox for a pincode".localize()
        case .forgotPassword:
...
