...
        subtitleLabel.style = .subtitle1darkgray
        subtitleLabel.text = mode == .login ? NSLocalizedString("launch_login_to_continue", comment: "") :  NSLocalizedString("launch_signup_with_circuit", comment: "")

        emailButton.style = .email
        emailButton.tintColor = .white
        emailButton.setTitle("Continue with email".localize(), for: .normal)
        emailButton.accessibilityIdentifier = "continueWithEmailButton"

        googleButton.setTitle("Continue with Google".localize(), for: .normal)
        googleButton.style = .google
        googleButton.accessibilityIdentifier = "continueWithGoogleButton"

        appleButton.setTitle("Continue with Apple".localize(), for: .normal)
...
