...
        return view
    }()

    private lazy var pincodeField: TextField = {
        let field = TextField()
        
        field.accessibilityIdentifier = "pincodeTextField"
        field.validators = [RequiredValidator()]
        
        switch type {
        case .passwordReset:
            field.configure(name: "Pincode".localize(), placeholder: "Check Email for Pin".localize())
            field.image = #imageLiteral(resourceName: "EmailBadge")
...
            leftNavigationAction = .pop(true)
        }
        #endif

        fields = [pincodeField]
        
        confirmationButtonTitle = "Verify".localize()
        
        if showResendOption {
            alternateButtonTitle = "Resend code".localize()
        }
        
        super.viewDidLoad()
...
