appId: com.thefreeride.driver.stage
---
- assertVisible: "Rate your Rider"
- tapOn:
    id: "ratingButton4"
- tapOn: "Submit Feedback"
